[package]
authors = ["XAMPPRocky <xampprocky@gmail.com>"]
categories = ["web-programming::http-client"]
description = "A modern, extensible GitHub API client."
documentation = "https://docs.rs/octocrab"
edition = "2018"
homepage = "https://github.com/XAMPPRocky/octocrab"
keywords = ["github", "github-api"]
license = "Apache-2.0/MIT"
name = "octocrab"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/octocrab.git"
version = "0.17.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
arc-swap = "1.3.0"
async-trait = "0.1.50"
base64 = "0.13.0"
bytes = "1.0.1"
cfg-if = "1.0.0"
chrono = {version = "0.4.19", features = ["serde"]}
futures-core = {version = "0.3.15", optional = true}
futures-util = {version = "0.3.15", optional = true}
http-cache-reqwest = "0.5.0"
hyperx = "1.3.0"
jsonwebtoken = "8"
once_cell = "1.7.2"
reqwest = {version = "0.11.10", default-features = false, features = ["json"]}
reqwest-middleware = "0.2.0"
secrecy = "0.8.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_path_to_error = "0.1.4"
snafu = {version = "0.7", features = ["backtraces"]}
url = {version = "2.2.2", features = ["serde"]}

[dev-dependencies]
tokio = {version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread", "time"]}
wiremock = "0.5.3"

[features]
default = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
stream = ["futures-core", "futures-util", "reqwest/stream"]
